# usdz-xros-unity-bridge

./: README.md
GenerateStubs/: .gitignore  Arg.cs  Export.cs  GenerateStubs.csproj  GenerateStubs.sln  MethodSignature.cs  Program.cs  Utils.cs  implemented.txt  returns.cs
UsdCs.Net/: DllImportUsd.cs  MonoPInvokeCallbackAttribute.cs  PreserveAttribute.cs  SdfValueTypeNames.cs  USD.NET.Internal.csproj  USD.NET.UsdCs.csproj  USD.NET.csproj  UsdCs.Net.sln
UsdCs.Net/Properties/: AssemblyInfo.cs
UsdCs.Net/USD.NET/: AccessMask.cs  ArrayPool.cs  ArrayUnpool.cs  Connectable.cs  CustomDataAttribute.cs  DefaultConversions.cs  DeserializationContext.cs  ForceNoNamespaceAttribute.cs  FusedDisplayColorAttribute.cs  FusedTransformAttribute.cs  IArbitraryPrimvars.cs  IRestorableData.cs  IntrinsicTypeConverter.cs  Orientation.cs  PooledArray.cs  PooledHandle.cs  Primvar.cs  PrimvarBase.cs  PrimvarInterpolation.cs  Purpose.cs  RangeIterator.cs  Reflect.cs  Relationship.cs  SampleBase.cs  SampleCollection.cs  SampleEnumerator.cs  Scene.cs  SiblingIterator.cs  SubdivScheme.cs  SubtreeIterator.cs  ToCsConverter.cs  ToCsCopyConverter.cs  ToVtConverter.cs  TokenCache.cs  TypeBinder.cs  UsdAssetPathAttribute.cs  UsdIo.cs  UsdMetadataAttribute.cs  UsdNamespaceAttribute.cs  UsdRelationshipAttribute.cs  (+7 more)
UsdCs.Net/pxr/: Ar.cs  ArPINVOKE.cs  ArResolverContext.cs  Gf.cs  GfBBox3d.cs  GfCamera.cs  GfDualQuatd.cs  GfDualQuatf.cs  GfDualQuath.cs  GfFrustum.cs  GfHalf.cs  GfInterval.cs  GfLine.cs  GfLineSeg.cs  GfMatrix2d.cs  GfMatrix2f.cs  GfMatrix3d.cs  GfMatrix3f.cs  GfMatrix4d.cs  GfMatrix4f.cs  GfPINVOKE.cs  GfPlane.cs  GfQuatd.cs  GfQuaternion.cs  GfQuatf.cs  GfQuath.cs  GfRange1d.cs  GfRange1f.cs  GfRange2d.cs  GfRange3d.cs  GfRay.cs  GfRotation.cs  GfVec2d.cs  GfVec2f.cs  GfVec2h.cs  GfVec2i.cs  GfVec3d.cs  GfVec3dVector.cs  GfVec3f.cs  GfVec3h.cs  (+612 more)
UsdCsInterceptor/: Logger.cpp  Logger.h  LoggerConfig.h  RealUsdCs.cpp  RealUsdCs.h  UsdCsInterceptor.sln  UsdCsInterceptor.vcxproj  UsdCsInterceptor.vcxproj.filters  UsdCs_wrapper_exports.cpp  UsdCs_wrapper_helpers.cpp  UsdCs_wrapper_helpers.h  dllmain.cpp  usd_selected.cpp  usd_unused.cpp
UsdCsInterceptor/Call order/: first run unique.txt  second run unique.txt
UsdCsInterceptor/Call order/sources/: all runs.txt
UsdCsWrapper/: .gitignore  CMakeLists.txt  build.py  readme.md
UsdCsWrapper/src/: UsdCsWrapper.cpp  stubs.cpp
